--- a/configs/elden_ring.toml
+++ b/configs/elden_ring.toml
@@ -89,7 +89,7 @@ type = "float"
 [attributes.HeroMapId]
 pattern = "48 8B 05 ?? ?? ?? ?? 48 85 C0 74 0F 48 39 88" 
 offsets = [0x10EF8, 0x0, 0x6D0]
-type = "float"
+type = "int"
 
 [attributes.Gravity]
 pattern = "48 8B 05 ?? ?? ?? ?? 48 85 C0 74 0F 48 39 88" 
@@ -174,7 +174,7 @@ pattern = "48 8B 48 08 49 89 8D"
 offsets = [0x190, 0x18, 0x20]
 type = "int"
 
-[attributes.NpcAnimId]
+[attributes.NpcAnimLength]
 method = "dll"
 pattern = "48 8B 48 08 49 89 8D"
 offsets = [0x190, 0x18, 0x24]
