refactor!: implement dynamic server initialization via gRPC
BREAKING CHANGE: Server now requires client-side configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,9 +133,11 @@ add_executable(siphon_client
     ${GRPC_SRCS}
 )
 
+
 target_link_libraries(siphon_client
     gRPC::grpc++
     protobuf::libprotobuf
+    tomlplusplus::tomlplusplus
 )
 
 
