feat: Add recording functionality with gRPC support
- Introduced ProcessRecorder class for managing recording sessions.
- Added StartRecording, StopRecording, and GetRecordingStatus RPC methods to SiphonService.
- Updated client to handle recording commands and display status.
- Enhanced ProcessCapture to track frame availability.
- Updated CMakeLists to include new source files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ add_executable(siphon
     src/server.cpp
     src/process_capture.cpp
     src/process_attribute.cpp
+    src/process_recorder.cpp
     include/dll_injector.h
     include/shared_memory.h
     ${PROTO_SRCS}
