feat: Add frame broadcasting and JPEG encoding for streaming
- Introduced FrameBroadcaster class to capture and distribute frames to subscribers.
- Added JPEG encoding functionality via JpegEncoder for efficient frame streaming.
- Updated ProcessRecorder to utilize FrameBroadcaster for frame capture.
- Enhanced SiphonService to support streaming frames over gRPC with configurable format and quality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ add_executable(siphon
     src/h5_recording_writer.cpp
     src/input_event_logger.cpp
     src/video_encoder.cpp
+    src/frame_broadcaster.cpp
+    src/jpeg_encoder.cpp
     include/dll_injector.h
     include/shared_memory.h
     ${PROTO_SRCS}
